--- a/XamarinToDo/MainPage.xaml
+++ b/XamarinToDo/MainPage.xaml
@@ -1,21 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
     x:Class="XamarinToDo.MainPage"
-    xmlns:local="clr-namespace:XamarinToDo.ViewModel"
     xmlns="http://xamarin.com/schemas/2014/forms"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:local="clr-namespace:XamarinToDo.ViewModel">
 
     <ContentPage.BindingContext>
-        <local:TodoListViewModel/>
+        <local:TodoListViewModel />
     </ContentPage.BindingContext>
 
     <StackLayout>
-        <Entry x:Name="TodoInput"
-               Text=""
-             />
+        <Entry
+            x:Name="TodoInput"
+            ReturnCommand="{Binding AddTodoCommand}"
+            Text="{Binding NewTodoText}" />
 
-        <StackLayout></StackLayout>
-
+        <ListView x:Name="TodoList" ItemsSource="{Binding TodoItems}">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <Label Text="{Binding TodoText}" />
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </StackLayout>
 
 </ContentPage>
