--- a/XamarinToDo/MainPage.xaml
+++ b/XamarinToDo/MainPage.xaml
@@ -19,7 +19,18 @@
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
-                        <Label Text="{Binding TodoText}" />
+                        <FlexLayout
+                            Padding="20,0"
+                            AlignItems="Center"
+                            JustifyContent="SpaceBetween">
+                            <Label Text="{Binding TodoText}" />
+                            <ImageButton
+                                BackgroundColor="Transparent"
+                                Command="{Binding Path=BindingContext.RemoveTodoCommand, Source={x:Reference TodoList}}"
+                                CommandParameter="{Binding .}"
+                                Scale="0.5"
+                                Source="delete.png" />
+                        </FlexLayout>
                     </ViewCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
